--- a/src/app/assignments/assignment-detail/assignment-detail.component.html
+++ b/src/app/assignments/assignment-detail/assignment-detail.component.html
@@ -1,89 +1,4 @@
-  <!-- [ Pre-loader ] start -->
-	<div class="loader-bg">
-		<div class="loader-track">
-			<div class="loader-fill"></div>
-		</div>
-	</div>
-	<!-- [ Pre-loader ] End -->
-
-	<!-- [ navigation menu ] start -->
-  <nav class="pcoded-navbar menupos-fixed menu-light brand-blue ">
-    <div class="navbar-wrapper ">
-        <div class="navbar-brand header-logo">
-            <a href="index.html" class="b-brand">
-              <img src="../assets/images/logo.svg" alt="" class="logo images">
-              <img src="../assets/images/logo-icon.svg" alt="" class="logo-thumb images">
-            </a>
-            <a class="mobile-menu" id="mobile-collapse" href="#!"><span></span></a>
-        </div>
-        <div class="navbar-content scroll-div">
-            <ul class="nav pcoded-inner-navbar">
-                <li class="nav-item pcoded-menu-caption">
-                    <label>Navigation</label>
-                </li>
-                <li class="nav-item">
-                    <a routerLink="/home"><span class="pcoded-micon"><i class="fas fa-tachometer-alt"></i></span><span class="pcoded-mtext">Dashboard</span></a>
-                </li>
-                <li class="nav-item">
-                    <a routerLink="/add"><span class="pcoded-micon"><i class="fas fa-journal-whills"></i></span><span class="pcoded-mtext">Ajouter un assignment</span></a>
-                </li>
-                <li class="nav-item">
-                    <a routerLink="/assignment/list"><span class="pcoded-micon"><i class="fas fa-journal-whills"></i></span><span class="pcoded-mtext">Lister les assignments</span></a>
-                </li>
-                <br><br>
-                <li class="nav-item">
-                  <button mat-raised-button color="primary" (click)="peuplerBD()" style="margin-left: 50px;">Peuplet BD</button>    
-                </li>
-            </ul>
-        </div>
-    </div>
-  </nav>
-  <!-- [ navigation menu ] end -->
-
-  <!-- [ Header ] start -->
-  <header class="navbar pcoded-header navbar-expand-lg navbar-light headerpos-fixed">
-    <div class="m-header">
-        <a class="mobile-menu" id="mobile-collapse1" href="#!"><span></span></a>
-        <a href="index.html" class="b-brand">
-          <img src="../assets/images/logo.svg" alt="" class="logo images">
-        </a>
-    </div>
-    <a class="mobile-menu" id="mobile-header" href="#!">
-        <i class="feather icon-more-horizontal"></i>
-    </a>
-    <div class="collapse navbar-collapse">
-        <a href="#!" class="mob-toggler"></a>
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <div class="main-search open">
-
-                </div>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            <li>
-                <div class="dropdown drp-user">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="fas fa-cog"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right profile-notification">
-                        <div class="pro-head">
-                          <img class="img-radius" src="../assets/images/user/avatar-1.jpg" alt="Generic placeholder image">
-                            <span>
-                                FANE
-                            </span>
-                        </div>
-                        <ul class="pro-body">
-                            <li><a href="#!"><i class="fas fa-sign-out-alt"></i> Se déconnecter</a></li>
-                            <li><a href="#!" class="dropdown-item"><i class="fas fa-user"></i> Profile</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </li>
-        </ul>
-    </div>
-  </header>
-  <!-- [ Header ] end -->
+<app-header></app-header>
   
   <!-- [ Main Content ] start -->
   <div class="pcoded-main-container">
@@ -172,7 +87,12 @@
                                                 <td>
                                                   <mat-checkbox *ngIf="!assignmentTransmis.rendu" (click)="onAssignmentRendu()"></mat-checkbox>
                                                 </td>
-                                            </tr>
+                                              </tr>
+                                              <tr>
+                                                <th>Professeur</th>
+                                                <td><img width="100" class="img-login" height="110" [src]="'../assets/images/user/avatar-1.jpg'"
+                                                  alt="Photo of a Shiba Inu"></td>
+                                              </tr>
                                           </table>
                                           <div class="col-xl-12 col-md-12">
                                               <div class="row">
