Mon 4eme commit

--- a/src/app/assignments/assignment-detail/assignment-detail.component.html
+++ b/src/app/assignments/assignment-detail/assignment-detail.component.html
@@ -89,6 +89,10 @@
                                                 </td>
                                               </tr>
                                               <tr>
+                                                <th>Matière</th>
+                                                <td>Analyse de données</td>
+                                            </tr>
+                                              <tr>
                                                 <th>Professeur</th>
                                                 <td><img width="100" class="img-login" height="110" [src]="'../assets/images/user/avatar-1.jpg'"
                                                   alt="Photo of a Shiba Inu"></td>
