--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -44,7 +44,7 @@
                                                       <i class="fas fa-users"></i>
                                                   </div>
                                               </div>
-                                              <h3 class="m-b-0 text-white">Assignments</h3>
+                                              <h3 class="m-b-0 text-white">Total d'assignments renseignés</h3>
                                           </div>
                                       </div>
                                   </div>
