Mon 5eme commit

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
                         <form>
                             <div class="input-group mb-2">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="feather icon-mail"></i></span>
+                                    <span class="input-group-text"><i class="feather icon-user"></i></span>
                                 </div>
                                 <input type="text" class="form-control" [(ngModel)]="username" name="username" placeholder="Nom d'utilisateur">
                             </div>
