Mon 6eme commit

--- a/src/app/edit-assignment/edit-assignment.component.html
+++ b/src/app/edit-assignment/edit-assignment.component.html
@@ -12,24 +12,7 @@
                         <div class="row">
                           <div class="col-md-1"></div>
                           <div class="col-md-10">
-                            <!-- <div class="container" *ngIf="assignment">
-                              <h1>Edition de l'assignment {{assignment.nom}}</h1>
-                              <form ngForm class="form">
-                                <mat-form-field>
-                                  <input matInput placeholder="Edition du nom" [(ngModel)]="nomAssignment" name="assignment-name">
-                                </mat-form-field>
-                                <mat-form-field>
-                                  <input matInput [matDatepicker]="picker" placeholder="Edition de la date" [(ngModel)]="dateDeRendu" name="date">
-                                  <mat-datepicker-toggle matSuffix [for]="picker">
-                                  </mat-datepicker-toggle>
-                                  <mat-datepicker #picker></mat-datepicker>
-                                </mat-form-field>
-                                <button mat-raised-button color="primary" (click)="onSaveAssignment()">
-                                  Sauver
-                                </button>
-                              </form>
-                            </div> -->
-
+                            
                             <!-- [ breadcrumb ] start -->
                             <div class="page-header">
                               <div class="page-block">
@@ -91,7 +74,7 @@
                                                       </mat-form-field>
                                                   </div>
                                                   
-                                                  <button class="btn btn-primary mb-4" type="submit" id="submit" (click)="onSaveAssignment()">Ajouter</button>
+                                                  <button class="btn btn-primary mb-4" type="submit" id="submit" (click)="onSaveAssignment()">Editer</button>
                                               </div>
                                           </form>
                                       </div>
