--- a/src/app/template/header/header.component.html
+++ b/src/app/template/header/header.component.html
@@ -68,7 +68,7 @@
                             <ul class="pro-body">
                                 <div class="row">
                                     <div class="col-md-3"></div>
-                                    <div class="col-md-9"><li><button mat-raised-button color="warn" (click)="login($event)">Se déconnecter</button></li></div>
+                                    <div class="col-md-9"><li><button mat-raised-button color="warn" (click)="logout();">Se déconnecter</button></li></div>
                                 </div>
                             </ul>
                         </div>
